--- a/main.css
+++ b/main.css
@@ -1,39 +1,51 @@
-#particles canvas{
+body {
+    font-family: 'Lora', serif;
+}
+canvas {
+    display: block;
+  }
+  
+  #particles-js {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    background: white
+  }
+  
+  .text {
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      text-align: center;
+      transform: translate(50%,-50%);
+      color: black;
+      max-width: 90%;
+  }
+
+
+
+
+.btn{
+font-size: 20px;
+color: #000000;
+background-color: #ffffff;
+padding: 10px 30px;
+border: solid #ffffff 2px;
+box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+border-radius: 1px;
+transition : 274ms;
+transform: translateY(0);
+align-items: center;
+cursor: pointer;
+font-family: 'Lora', serif;
 }
-.text {
-	position: absolute;
-	top: 50%;
-	right: 50%;
-    text-align: center;
-	transform: translate(50%,-50%);
-	color: black;
-	max-width: 90%;
-	padding: 2em 3em;
-	font-family: 'Lora', serif;
-}
-@media only screen and (max-width: 500px) {
-    .text {
-        position: absolute;
-        top: 50%;
-        right: 50%;
-        transform: translate(50%,-50%);
-        color: black;
-        max-width: 90%;
-        padding: 2em 3em;
-        font-family: 'Lora', serif;
-        text-align: left;
-        float: left;
-    }
-}
-p {
-    float: left;
-}
-h1 {
-	font-size: 2.25em;
-	font-weight: 700;
-	letter-spacing: -1px;
+
+.btn:hover{
+
+transition : 274ms;
+padding: 10px 24px;
+transform : translateY(-0px);
+background-color: black;
+color: white;
+border: solid 2px #000000;
 }
