--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Lora', serif;
+    color: black;
 }
 canvas {
     display: block;
@@ -7,8 +8,8 @@ canvas {
   
   #particles-js {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 99%;
+    height: 99%;
     background: white
   }
   
@@ -19,17 +20,23 @@ canvas {
       text-align: center;
       transform: translate(50%,-50%);
       color: black;
-      max-width: 90%;
   }
-
+  img {
+    max-width: 300px;
+    height: 300px;
+  }
+.card{
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
 
 
 
 .btn{
 font-size: 20px;
 color: #000000;
-background-color: #ffffff;
 padding: 10px 30px;
+background-color: transparent;
 border: solid #ffffff 2px;
 box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
 border-radius: 1px;
